--- a/src/assets/src/styles/style.scss
+++ b/src/assets/src/styles/style.scss
@@ -12,8 +12,11 @@
 }
 
 //Colors
+$white: #f5f5f5;
 $black: #0f0f0f;
+$grey: #e2e2e2;
 $dark-grey: #2a2a2a;
+$dark-grey-transparent: #2a2a2a1a;
 
 .wrapper {
     overflow: hidden;
@@ -68,9 +71,14 @@ p {
         &::after {
             content: "";
             display: block;
-            width: 100%;
-            height: 100%;
-            background-color: #fff;
+            width: 100vw;
+            height: 80%;
+            background-color: $dark-grey-transparent;
+            position: absolute;
+            top: 10%;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: -1;
         }
     }
 
@@ -103,10 +111,12 @@ p {
             justify-content: center;
             align-items: center;
             font-size: 1.5rem;
+            background-color: $white;
         }
 
         &-back {
             transform: rotateY(180deg);
+            background-color: $grey;
         }
     }
 }
