--- a/src/assets/src/styles/style.scss
+++ b/src/assets/src/styles/style.scss
@@ -14,6 +14,7 @@
 //Colors
 $white: #f5f5f5;
 $black: #0f0f0f;
+$black-transparent: #0f0f0f80;
 $grey: #e2e2e2;
 $dark-grey: #2a2a2a;
 $dark-grey-transparent: #2a2a2a1a;
@@ -85,7 +86,7 @@ p {
     &__item {
         position: relative;
         width: 30rem;
-        min-height: 300px;
+        height: 300px;
         cursor: pointer;
         transition: all 1s ease;
         transform-style: preserve-3d;
@@ -101,7 +102,7 @@ p {
 
         &-front,
         &-back {
-            padding: 32px 20px;
+            padding: 20px 20px;
             backface-visibility: hidden;
             position: absolute;
             top: 0;
@@ -109,20 +110,29 @@ p {
             width: 100%;
             height: 100%;
             @include flex-column();
-            justify-content: center;
-            align-items: center;
             font-size: 1.5rem;
             background-color: $white;
-            overflow-y: scroll;
+            overflow-y: auto;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: 50% 50%;
+            filter: grayscale(40%) blur(0.4px);
 
             p {
                 font-size: 20px;
             }
+
+            strong {
+                text-shadow: 2px 2px 2px $black-transparent;
+            }
         }
 
         &-back {
+            padding: 0;
+            justify-content: center;
+            align-items: center;
             transform: rotateY(180deg);
-            background-color: $grey;
+            // background-color: $grey;
         }
     }
 }
